[gd_scene load_steps=4 format=3 uid="uid://cgh17luhb7msk"]

[ext_resource type="Script" path="res://Script/CurveBullet.gd" id="1_g0atj"]
[ext_resource type="Texture2D" uid="uid://e25xdqqem1f" path="res://Art/Placeholder/Crawler/Bullet.png" id="2_yw5eh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r1a77"]
radius = 28.0179

[node name="CurveBullet" type="CharacterBody2D"]
script = ExtResource("1_g0atj")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="Visuals"]
position = Vector2(0, 2)
scale = Vector2(0.36, 0.36)
texture = ExtResource("2_yw5eh")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_r1a77")

[node name="LifeTime" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="LifeTime" to="." method="_on_life_time_timeout"]
